# QUICinput

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/assets/: icons.gresource.xml
client/assets/icons/: Assets.car
client/assets/src/MacOSIcon.icon/: icon.json
client/src/: about.rs  connect.rs  input.rs  key_monitor.rs  main.rs  menubar.rs  quic.rs  quic_helper_thread.rs
server/: Cargo.toml
server/src/: main.rs  mousemove.rs  server.rs  simulator.rs
shared/: Cargo.toml
shared/src/: lib.rs
