[package]
name = "client"
version = "0.1.0"
edition = "2024"
authors = ["Alex E <igsalexcodes@gmail.com>"]
repository = "https://github.com/aellul27/QUICInput"


[dependencies]
shared = { path = "../shared" }
gtk4 = "0.10.2"
libadwaita = "0.8.0"
glib = { version = "0.21.4" }
display-info = "0.5.7"
rdev = { git = "https://github.com/Narsil/rdev.git", features = ["unstable_grab", "serialize"] }
rmp-serde = "1.3.0"
quinn = "0.11.9"
rustls = "0.23.35"
futures = "0.3.31"
tokio = { version = "1.39", features = ["rt-multi-thread"] }
