[package]
name = "client"
version = "0.1.0"
edition = "2024"
authors = ["Alex E <igsalexcodes@gmail.com>"]
repository = "https://github.com/aellul27/QUICInput"


[dependencies]
shared = { path = "../shared" }
gtk4 = {version = "0.10.2", features = ["gnome_49"]}
libadwaita = { version = "0.8.1", features = ["v1_8", "gtk_v4_20"] }
glib = { version = "0.21.4", features = ["v2_86"]}
display-info = "0.5.7"
rmp-serde = "1.3.0"
quinn = "0.11.9"
rustls = "0.23.35"
futures = "0.3.31"
tokio = { version = "1.39", features = ["rt-multi-thread"] }
rdev = { git = "https://github.com/Narsil/rdev.git", features = ["unstable_grab", "serialize"] }
[target.'cfg(target_os = "linux")'.dependencies]
rdev = { git = "https://github.com/Narsil/rdev.git", features = ["unstable_grab", "wayland", "x11"] }


[build-dependencies]
glib-build-tools = "0.21.0"