[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Alex E <igsalexcodes@gmail.com>"]
repository = "https://github.com/aellul27/QUICInput"

[dependencies]
shared = { path = "../shared" }
quinn = "0.11.9"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
rustls = "0.23.35"
rcgen = "0.14.5"
rmp-serde = "1.3.0"
rdev = { git = "https://github.com/Narsil/rdev.git", features = ["serialize"] }